# normative-world-model

./: .env.example  .gitattributes  .gitignore  AGENTS.md  DESIGN_NOTE.md  EXECUTION_PLAN.md  NOTICE  PREREGISTRATION.md  PREREGISTRATION_V3.md  README.md  README.zh-CN.md  pyproject.toml  requirements-model.txt
artifacts/: README.md
configs/: calibration_cases.json  evaluator_profiles.toml  experiment.example.toml  local_pilot_qwen3_1_7b.toml  model_arms.toml  normative_predicates.toml  phase1_v3_source_lock.json  phase2_evaluation.toml  phase2_retained.toml  phase2_retained_result_lock.json  phase3_anti_collapse_smoke_lock.json  phase3_anti_collapse_smoke_result_lock.json  phase3_anti_collapse_smoke_v2.toml  phase3_anti_collapse_smoke_v2_lock.json  phase3_anti_collapse_smoke_v2_result_lock.json  phase3_anti_collapse_smoke_v2_selection_lock.json  phase3_diversity_gateway_v3.toml  phase3_diversity_gateway_v3_input_lock.json  phase3_diversity_gateway_v3_result_lock.json  phase3_diversity_gateway_v3_selection_lock.json  phase3_estimand_amendment.json  phase3_representation_gateway_v4.toml  phase3_representation_gateway_v4_input_lock.json  phase3_representation_gateway_v4_result_lock.json  phase3_representation_gateway_v4_selection_lock.json  phase3_retained_arm_comparison.toml  phase3_retained_arm_selection_lock.json  phase3_retained_schema_gate.toml  phase3_retained_schema_gate_dataset_lock.json  phase3_retained_schema_gate_result_lock.json  phase3_slot_inventory.json  phase5_common_termination_probe_candidate.toml  phase5_lock_a_acceptance_20260722.json  (+12 more)
runs/: README.md
(+275 files in other folders)
